fixed the alignment

--- a/pages/contact-us.css
+++ b/pages/contact-us.css
@@ -1,13 +1,13 @@
 .ConUs {
-	text-align: center;
-	width: 476px;
-	margin: 0 auto; 
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	text-align: center;        
+	margin-left: 0px;  
 	
 }
 
 .ConUsPar {
-	text-align: center;
+ 
+	text-align: center;        
+	margin-left: 0px;  
 
 }
 
@@ -48,10 +48,10 @@
     text-align: center;
     float: left;
     width: 100%;
-    padding: 20px;
+    padding: 0px;
   }
   
-  /* Clear floats after the columns */
+ 
   .row:after {
     content: "";
     display: table;
